Added neon effect

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -22,16 +22,18 @@
 .hand--hours {
   background: #ff1100;
   width: 0.4rem;
+  box-shadow: rgb(255, 0, 0) 0 0 1rem, inset rgb(255, 0, 0) 0 0 1rem;
 }
 
 .hand--minutes {
-  background: #ff1100;
+  background: #ff0000;
   width: 0.3rem;
+  box-shadow: rgb(255, 0, 0) 0 0 1rem, inset rgb(255, 0, 0) 0 0 1rem;
 }
 
 .hand--seconds {
   background: #ffffff;
   width: 0.1rem;
-  box-shadow: rgb(4, 0, 255) 0 0 1rem;
+  box-shadow: rgb(255, 255, 255) 0 0 1rem, inset rgb(255, 255, 255) 0 0 1rem;
   transform: rotate(360deg);
 }
